--- a/public/index.html
+++ b/public/index.html
@@ -268,10 +268,10 @@
 			<aside>
 				<h2>Vremenske slike</h2>
 				<div class="image-grid">
-					<img src="images/picture1.jpg" alt="Sunčano vrijeme" />
-					<img src="images/picture2.jpg" alt="Oblačno vrijeme" />
-					<img src="images/picture3.jpg" alt="Kišno vrijeme" />
-					<img src="images/picture4.jpg" alt="Snježno vrijeme" />
+					<img src="images2/picture1.jpg" alt="Sunčano vrijeme" />
+					<img src="images2/picture2.jpg" alt="Oblačno vrijeme" />
+					<img src="images2/picture3.jpg" alt="Kišno vrijeme" />
+					<img src="images2/picture4.jpg" alt="Snježno vrijeme" />
 				</div>
 			</aside>
 		</main>
