--- a/public/pages/slike.html
+++ b/public/pages/slike.html
@@ -18,7 +18,7 @@
 				<ul class="nav-menu">
 					<li><a href="../index.html">Početna</a></li>
 					<li><a href="../pages/grafikon.html">Grafikon</a></li>
-					<li><a href="../pages/slike.html">Slike</a></li>
+					<li><a href="slike">Slike</a></li>
 				</ul>
 			</nav>
 		</header>
