--- a/public/pages/grafikon.html
+++ b/public/pages/grafikon.html
@@ -14,7 +14,7 @@
 				<ul class="nav-menu">
 					<li><a href="../index.html">Početna</a></li>
 					<li><a href="grafikon.html">Grafikon</a></li>
-					<li><a href="slike.html">Slike</a></li>
+					<li><a href="slike">Slike</a></li>
 				</ul>
 			</nav>
 		</header>
